--- a/app/views/posts/index_front.html.erb
+++ b/app/views/posts/index_front.html.erb
@@ -7,7 +7,7 @@
               :class => 'btn btn-primary' %>
 </div>
 <div class="page-subhead">
-  <%= form_for 'post',  :url => @action_url, :html => { :class => "form-horizontal post" , :multipart => true} do |f| %>
+  <%= form_for 'post', :html => { :class => "form-horizontal post" , :multipart => true} do |f| %>
 
     <div class="row">
         <div class="control-group col-md-2">
