--- a/app/views/parent_categories/_form.html.erb
+++ b/app/views/parent_categories/_form.html.erb
@@ -1,21 +1,31 @@
-<%= form_for(@parent_category) do |f| %>
-  <% if @parent_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@parent_category.errors.count, "error") %> prohibited this parent_category from being saved:</h2>
+<%= form_for @parent_category, :html => { :class => "form-horizontal parent_category" } do |f| %>
 
-      <ul>
-      <% @parent_category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <% if @parent_category.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@parent_category.errors.count, "error") %> prohibited this parent_category from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @parent_category.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'form-control' %>
+    </div>
+    <%= error_span(@parent_category[:name]) %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+
+  <%= f.submit nil, :class => 'btn btn-primary' %>
+  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+            parent_categories_path, :class => 'btn btn-default' %>
+
 <% end %>
