--- a/app/views/parent_categories/index.html.erb
+++ b/app/views/parent_categories/index.html.erb
@@ -1,27 +1,36 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Parent Categories</h1>
-
-<table>
+<%- model_class = ParentCategory -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @parent_categories.each do |parent_category| %>
       <tr>
+        <td><%= link_to parent_category.id, parent_category_path(parent_category) %></td>
         <td><%= parent_category.name %></td>
-        <td><%= link_to 'Show', parent_category %></td>
-        <td><%= link_to 'Edit', edit_parent_category_path(parent_category) %></td>
-        <td><%= link_to 'Destroy', parent_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l parent_category.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_parent_category_path(parent_category), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      parent_category_path(parent_category),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Parent category', new_parent_category_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_parent_category_path,
+            :class => 'btn btn-primary' %>
